--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@vercel/speed-insights": "^1.2.0",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^2.15.3",
+    "tsconfig": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
