--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "next build",
         "sdk": "cd sdk && npm run sdk && cd ../ && npm install ./sdk --no-save",
         "copy": "cd sdk && npm run copy",
+        "sandbox": "cd sdk && npm run sandbox",
         "start": "next start",
         "lint": "next lint"
     },
