--- a/sdk/tsconfig.json
+++ b/sdk/tsconfig.json
@@ -9,7 +9,8 @@
         "declaration": true,
         "declarationDir": "dist/types",
         "emitDeclarationOnly": true,
-        "rootDir": "src"
+        "rootDir": "src",
+        "resolveJsonModule": true
     },
     "include": ["src/**/*"]
 }
