Update SDK to version 0.2.4 and enhance initialization process
- Added a new publish script in package.json for easier SDK publishing.
- Updated pathing.js and pathing.min.js with improved API key handling, now supporting data attributes.
- Removed deprecated analytics page and adjusted dashboard components for better user experience.
- Cleaned up domain management features by removing unused components and improving the domain addition process.
- Updated README to reflect changes in API key initialization.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev": "next dev --turbopack",
         "build": "next build",
         "sdk": "cd sdk && npm run sdk && cd ../ && npm install ./sdk --no-save",
+        "publish": "cd sdk && npm run publish && cd ../ && npm install ./sdk --no-save",
         "copy": "cd sdk && npm run copy",
         "sandbox": "cd sdk && npm run sandbox",
         "start": "next start",
