--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
         "@supabase/auth-helpers-nextjs": "^0.10.0",
         "@supabase/ssr": "^0.6.1",
         "@supabase/supabase-js": "^2.49.4",
+        "@types/react-grid-layout": "^1.3.5",
+        "@types/uuid": "^10.0.0",
         "@vercel/analytics": "^1.5.0",
         "@vercel/speed-insights": "^1.2.0",
         "next": "15.3.1",
         "pathingjs": "latest",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-grid-layout": "^1.5.1",
         "recharts": "^2.15.3",
-        "tsconfig": "^7.0.0"
+        "tsconfig": "^7.0.0",
+        "uuid": "^11.1.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
