Add some basic unit tests

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
         "copy": "cd sdk && npm run copy",
         "sandbox": "cd sdk && npm run sandbox",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage"
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
@@ -31,15 +34,26 @@
         "uuid": "^11.1.0"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.27.1",
+        "@babel/preset-react": "^7.27.1",
+        "@babel/preset-typescript": "^7.27.1",
         "@eslint/eslintrc": "^3",
         "@tailwindcss/postcss": "^4",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.3.0",
+        "@types/jest": "^29.5.14",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "babel-jest": "^29.7.0",
         "esbuild": "^0.25.3",
         "eslint": "^9",
         "eslint-config-next": "15.3.1",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "tailwindcss": "^4",
+        "ts-jest": "^29.3.2",
         "typescript": "^5"
     }
 }
