--- a/package.json
+++ b/package.json
@@ -34,10 +34,8 @@
         "uuid": "^11.1.0"
     },
     "devDependencies": {
-        "@babel/preset-env": "^7.27.1",
-        "@babel/preset-react": "^7.27.1",
-        "@babel/preset-typescript": "^7.27.1",
         "@eslint/eslintrc": "^3",
+        "@swc/jest": "^0.2.38",
         "@tailwindcss/postcss": "^4",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
@@ -45,7 +43,6 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
-        "babel-jest": "^29.7.0",
         "esbuild": "^0.25.3",
         "eslint": "^9",
         "eslint-config-next": "15.3.1",
