--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
         "@types/uuid": "^10.0.0",
         "@vercel/analytics": "^1.5.0",
         "@vercel/speed-insights": "^1.2.0",
+        "@xyflow/react": "^12.6.0",
         "next": "15.3.1",
         "pathingjs": "latest",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-grid-layout": "^1.5.1",
+        "reactflow": "^11.11.4",
         "recharts": "^2.15.3",
         "tsconfig": "^7.0.0",
         "uuid": "^11.1.0"
