--- a/sdk/package.json
+++ b/sdk/package.json
@@ -22,7 +22,7 @@
     ],
     "scripts": {
         "build": "node build.js && tsc --emitDeclarationOnly --outDir dist/types",
-        "copy": "cp dist/pathing.min.js ../public/pathing.js && cp dist/pathing.min.js ../public/pathing.min.js",
+        "copy": "cp dist/pathing.{min,esm}.{js,js.map} ../public/ && cp dist/pathing.min.js ../public/pathing.js",
         "sdk": "npm version patch && npm run build && npm run copy",
         "publish": "npm run sdk && npm publish",
         "sandbox": "node sandbox.js"
