Move icons and manifest resources, update push to npm process, cleanup

--- a/sdk/tsconfig.json
+++ b/sdk/tsconfig.json
@@ -10,7 +10,8 @@
         "declarationDir": "dist/types",
         "emitDeclarationOnly": true,
         "rootDir": "src",
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "skipLibCheck": true
     },
     "include": ["src/**/*"]
 }
