--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pathingjs",
-    "version": "0.2.4",
+    "version": "0.2.13",
     "main": "dist/pathing.min.js",
     "module": "dist/pathing.esm.js",
     "exports": {
@@ -23,8 +23,8 @@
     "scripts": {
         "build": "node build.js && tsc --emitDeclarationOnly --outDir dist/types",
         "copy": "cp dist/pathing.{min,esm}.{js,js.map} ../public/ && cp dist/pathing.min.js ../public/pathing.js",
-        "sdk": "npm version patch && npm run build && npm run copy",
-        "publish": "npm run sdk && npm publish",
+        "sdk": "npm run build && npm run copy",
+        "push": "npm run sdk && npm version patch && npm publish",
         "sandbox": "node sandbox.js"
     },
     "description": "Enhanced analytics tracking library with comprehensive device, browser, and engagement data collection",
